# llca

./: .gitignore  CMakeLists.txt  ProjectHome.md
data/: test_A  test_T  test_indicator  test_kernel_K  test_kernel_X  test_knn_N  test_knn_X  test_read_matrix  test_read_vector_int  test_scores  twomoons500train.txt
include/llca/: configure.hpp.in  kernel.hpp  kmeans.hpp  knn.hpp  llca.hpp  measure.hpp  svm.hpp  util.hpp
src/: kernel.cpp  kmeans.cpp  knn.cpp  llca.cpp  measure.cpp  svm.cpp  util.cpp
test/: test_llca.cpp  test_llca_measure.cpp  test_util.cpp
